change  header color orange  to green

--- a/frontend-service/templates/index.html
+++ b/frontend-service/templates/index.html
@@ -19,7 +19,7 @@
             <div class='col s12'>
                 <div class="container">
                     <br><br>
-                    <h1 class="header center orange-text">Devsumi 2019 Fukuoka - GKE</h1>
+                    <h1 class="header center green-text">Devsumi 2019 Fukuoka - GKE</h1>
                     <div class="row center">
                         <h5 class="header col s12 light">Notice</h5>
                         <h5 class="header col s12 light">{{notice_msg}}</h5>
